# WBSCRP

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
pool/: CMakeLists.txt
pool/include/: allocator.hpp  fixpool.hpp  memory_pool.hpp  pool_reporter.hpp
pool/interface/: reporter.cpp
scrapper/: CMakeLists.txt
scrapper/include/: crc64.hpp  encoding.hpp  encoding_character_reference.hpp  parser.hpp  parser_error.hpp  scrapper.hpp  tokenizer.hpp
scrapper/src/: encoding.cpp  parser.cpp  parser_error.cpp  scrapper.cpp  tokenizer.cpp
tests/: CMakeLists.txt  main.cpp  pool_tests.cpp  scrp_tests.cpp  tests.cpp
tools/chref/: CMakeLists.txt  main.cpp
