cmake_minimum_required(VERSION 3.24)


PROJECT(WBSCRP VERSION 1.0
        DESCRIPTION "WebScrapper"
        LANGUAGES C CXX)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_COLOR_DIAGNOSTICS ON)



SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)

ADD_COMPILE_DEFINITIONS($<$<CONFIG:Debug>:_DEBUG>)

ADD_SUBDIRECTORY(pool)
ADD_SUBDIRECTORY(tests)


